Change all instances of 'flowergram' to 'flower delivery' or 'send flowers' and refine hamburger menu
The english translation of 'blommogram' got corrected to 'flower delivery' and 'send flowers'. The hamburger menu got updated so that it closes again if you press outside of the drop-down.

--- a/_templates/modules/header.html
+++ b/_templates/modules/header.html
@@ -20,14 +20,17 @@
         </label>
         <div class="dropDownMenu">
             <a href="!!!PRODUCTS_LINK!!!" class="products textMediumSmall textLight fontInter">!!!PRODUCTS!!!</a>
-            <a href="!!!CONSULTATION_LINK!!!" class="products textMediumSmall textLight fontInter">!!!CONSULTATION!!!</a>
-            <a href="!!!FLOWERGRAM_LINK!!!" class="products textMediumSmall textLight fontInter">!!!FLOWERGRAM!!!</a>
+            <a href="!!!CONSULTATION_LINK!!!"
+                class="products textMediumSmall textLight fontInter">!!!CONSULTATION!!!</a>
+            <a href="!!!FLOWER_DELIVERY_LINK!!!"
+                class="products textMediumSmall textLight fontInter">!!!FLOWER_DELIVERY!!!</a>
         </div>
     </div>
 
     <div class="allServices">
         <a href="!!!PRODUCTS_LINK!!!" class="products textMedium textDark fontProza fontBold">!!!PRODUCTS!!!</a>
         <a href="!!!CONSULTATION_LINK!!!" class="products textMedium textDark fontProza fontBold">!!!CONSULTATION!!!</a>
-        <a href="!!!FLOWERGRAM_LINK!!!" class="products textMedium textDark fontProza fontBold">!!!FLOWERGRAM!!!</a>
+        <a href="!!!FLOWER_DELIVERY_LINK!!!"
+            class="products textMedium textDark fontProza fontBold">!!!FLOWER_DELIVERY!!!</a>
     </div>
 </header>
