--- a/_templates/pages/flower_delivery.html
+++ b/_templates/pages/flower_delivery.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>!!!FLOWERGRAM_TITLE!!!</title>
+    <title>!!!FLOWER_DELIVERY_TITLE!!!</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <noscript>
@@ -29,9 +29,9 @@
             <div class="servicesPage">
                 <div class="service">
                     <div class="serviceName textMedium fontProza fontBold">
-                        !!!FLOWERGRAM!!!
+                        !!!FLOWER_DELIVERY!!!
                     </div>
-                    <img src="images/flowergram.jpg" alt="">
+                    <img src="images/flower_delivery.jpg" alt="">
                     <div class="sendFlowersText textMediumSmall fontProza">
                         !!!SEND_FLOWERS!!!
                     </div>
@@ -41,7 +41,7 @@
                     </div>
                     <input type="button" class="confirmButton textSmall fontInter" value="!!!CHECK_POSTAL_CODE!!!">
                     <div class="serviceDescription textSmall fontInter">
-                        !!!FLOWERGRAM_DESCRIPTION!!!
+                        !!!FLOWER_DELIVERY_DESCRIPTION!!!
                     </div>
                 </div>
             </div>
