--- a/website/flower_delivery.html
+++ b/website/flower_delivery.html
@@ -27,8 +27,8 @@
     <div class="languageSelection">
         <button onclick="flagDropDown()" class="flagDropDown" style="background-image: url(./images/swedish_flag.jpg);"></button>
         <div class="flagDropDownMenu">
-            <a href="flowergram.html"><img src="./images/swedish_flag.jpg" alt="Swedish"></a>
-            <a href="flowergram_english.html"><img src="./images/british_flag.jpg" alt="English"></a>
+            <a href="flower_delivery.html"><img src="./images/swedish_flag.jpg" alt="Swedish"></a>
+            <a href="flower_delivery_english.html"><img src="./images/british_flag.jpg" alt="English"></a>
         </div>
     </div>
 
@@ -45,15 +45,18 @@
         </label>
         <div class="dropDownMenu">
             <a href="products.html" class="products textMediumSmall textLight fontInter">Produkter</a>
-            <a href="consultation.html" class="products textMediumSmall textLight fontInter">Konsultation</a>
-            <a href="flowergram.html" class="products textMediumSmall textLight fontInter">Blommogram</a>
+            <a href="consultation.html"
+                class="products textMediumSmall textLight fontInter">Konsultation</a>
+            <a href="flower_delivery.html"
+                class="products textMediumSmall textLight fontInter">Blommogram</a>
         </div>
     </div>
 
     <div class="allServices">
         <a href="products.html" class="products textMedium textDark fontProza fontBold">Produkter</a>
         <a href="consultation.html" class="products textMedium textDark fontProza fontBold">Konsultation</a>
-        <a href="flowergram.html" class="products textMedium textDark fontProza fontBold">Blommogram</a>
+        <a href="flower_delivery.html"
+            class="products textMedium textDark fontProza fontBold">Blommogram</a>
     </div>
 </header>
     <main>
@@ -63,7 +66,7 @@
                     <div class="serviceName textMedium fontProza fontBold">
                         Blommogram
                     </div>
-                    <img src="images/flowergram.jpg" alt="">
+                    <img src="images/flower_delivery.jpg" alt="">
                     <div class="sendFlowersText textMediumSmall fontProza">
                         Skicka blombuketter med vår blommogramtjänst
                     </div>
