--- a/website/flower_delivery_english.html
+++ b/website/flower_delivery_english.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flowergram</title>
+    <title>Send Flowers</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <noscript>
@@ -27,8 +27,8 @@
     <div class="languageSelection">
         <button onclick="flagDropDown()" class="flagDropDown" style="background-image: url(./images/british_flag.jpg);"></button>
         <div class="flagDropDownMenu">
-            <a href="flowergram.html"><img src="./images/swedish_flag.jpg" alt="Swedish"></a>
-            <a href="flowergram_english.html"><img src="./images/british_flag.jpg" alt="English"></a>
+            <a href="flower_delivery.html"><img src="./images/swedish_flag.jpg" alt="Swedish"></a>
+            <a href="flower_delivery_english.html"><img src="./images/british_flag.jpg" alt="English"></a>
         </div>
     </div>
 
@@ -45,15 +45,18 @@
         </label>
         <div class="dropDownMenu">
             <a href="products_english.html" class="products textMediumSmall textLight fontInter">Products</a>
-            <a href="consultation_english.html" class="products textMediumSmall textLight fontInter">Consultation</a>
-            <a href="flowergram_english.html" class="products textMediumSmall textLight fontInter">Flowergram</a>
+            <a href="consultation_english.html"
+                class="products textMediumSmall textLight fontInter">Consultation</a>
+            <a href="flower_delivery_english.html"
+                class="products textMediumSmall textLight fontInter">Send Flowers</a>
         </div>
     </div>
 
     <div class="allServices">
         <a href="products_english.html" class="products textMedium textDark fontProza fontBold">Products</a>
         <a href="consultation_english.html" class="products textMedium textDark fontProza fontBold">Consultation</a>
-        <a href="flowergram_english.html" class="products textMedium textDark fontProza fontBold">Flowergram</a>
+        <a href="flower_delivery_english.html"
+            class="products textMedium textDark fontProza fontBold">Send Flowers</a>
     </div>
 </header>
     <main>
@@ -61,9 +64,9 @@
             <div class="servicesPage">
                 <div class="service">
                     <div class="serviceName textMedium fontProza fontBold">
-                        Flowergram
+                        Send Flowers
                     </div>
-                    <img src="images/flowergram.jpg" alt="">
+                    <img src="images/flower_delivery.jpg" alt="">
                     <div class="sendFlowersText textMediumSmall fontProza">
                         Send flower bouquets with our flower delivery service.
                     </div>
