--- a/_templates/modules/header.html
+++ b/_templates/modules/header.html
@@ -4,6 +4,7 @@
         <div class="flagDropDownMenu">
             <a href="!!!LANGUAGE_LINK_SWEDISH!!!"><img src="./images/swedish_flag.jpg" alt="Swedish"></a>
             <a href="!!!LANGUAGE_LINK_ENGLISH!!!"><img src="./images/british_flag.jpg" alt="English"></a>
+            <a href="!!!LANGUAGE_LINK_DANISH!!!"><img src="./images/danish_flag.jpg" alt="Danish"></a>
         </div>
     </div>
 
@@ -20,17 +21,14 @@
         </label>
         <div class="dropDownMenu">
             <a href="!!!PRODUCTS_LINK!!!" class="products textMediumSmall textLight fontInter">!!!PRODUCTS!!!</a>
-            <a href="!!!CONSULTATION_LINK!!!"
-                class="products textMediumSmall textLight fontInter">!!!CONSULTATION!!!</a>
-            <a href="!!!FLOWER_DELIVERY_LINK!!!"
-                class="products textMediumSmall textLight fontInter">!!!FLOWER_DELIVERY!!!</a>
+            <a href="!!!CONSULTATION_LINK!!!" class="products textMediumSmall textLight fontInter">!!!CONSULTATION!!!</a>
+            <a href="!!!FLOWER_DELIVERY_LINK!!!" class="products textMediumSmall textLight fontInter">!!!FLOWER_DELIVERY!!!</a>
         </div>
     </div>
 
     <div class="allServices">
         <a href="!!!PRODUCTS_LINK!!!" class="products textMedium textDark fontProza fontBold">!!!PRODUCTS!!!</a>
         <a href="!!!CONSULTATION_LINK!!!" class="products textMedium textDark fontProza fontBold">!!!CONSULTATION!!!</a>
-        <a href="!!!FLOWER_DELIVERY_LINK!!!"
-            class="products textMedium textDark fontProza fontBold">!!!FLOWER_DELIVERY!!!</a>
+        <a href="!!!FLOWER_DELIVERY_LINK!!!" class="products textMedium textDark fontProza fontBold">!!!FLOWER_DELIVERY!!!</a>
     </div>
 </header>
