--- a/website/consultation_english.html
+++ b/website/consultation_english.html
@@ -16,6 +16,7 @@
         <div class="flagDropDownMenu">
             <a href="consultation.html"><img src="./images/swedish_flag.jpg" alt="Swedish"></a>
             <a href="consultation_english.html"><img src="./images/british_flag.jpg" alt="English"></a>
+            <a href="consultation_danish.html"><img src="./images/danish_flag.jpg" alt="Danish"></a>
         </div>
     </div>
 
@@ -32,18 +33,15 @@
         </label>
         <div class="dropDownMenu">
             <a href="products_english.html" class="products textMediumSmall textLight fontInter">Products</a>
-            <a href="consultation_english.html"
-                class="products textMediumSmall textLight fontInter">Consultation</a>
-            <a href="flower_delivery_english.html"
-                class="products textMediumSmall textLight fontInter">Send Flowers</a>
+            <a href="consultation_english.html" class="products textMediumSmall textLight fontInter">Consultation</a>
+            <a href="flower_delivery_english.html" class="products textMediumSmall textLight fontInter">Send Flowers</a>
         </div>
     </div>
 
     <div class="allServices">
         <a href="products_english.html" class="products textMedium textDark fontProza fontBold">Products</a>
         <a href="consultation_english.html" class="products textMedium textDark fontProza fontBold">Consultation</a>
-        <a href="flower_delivery_english.html"
-            class="products textMedium textDark fontProza fontBold">Send Flowers</a>
+        <a href="flower_delivery_english.html" class="products textMedium textDark fontProza fontBold">Send Flowers</a>
     </div>
 </header>
     <main>
@@ -54,7 +52,7 @@
                         Consultation
                     </div>
                     <div class="priceTag">
-                        250 SEK / 30 Minutes
+                        250 SEK / 30 minutes
                     </div>
                     <img src="images/consultation.jpg" alt="">
                     <div class="serviceDescription">
