--- a/website/index_english.html
+++ b/website/index_english.html
@@ -35,6 +35,7 @@
         <div class="flagDropDownMenu">
             <a href="index.html"><img src="./images/swedish_flag.jpg" alt="Swedish"></a>
             <a href="index_english.html"><img src="./images/british_flag.jpg" alt="English"></a>
+            <a href="index_danish.html"><img src="./images/danish_flag.jpg" alt="Danish"></a>
         </div>
     </div>
 
@@ -51,24 +52,21 @@
         </label>
         <div class="dropDownMenu">
             <a href="products_english.html" class="products textMediumSmall textLight fontInter">Products</a>
-            <a href="consultation_english.html"
-                class="products textMediumSmall textLight fontInter">Consultation</a>
-            <a href="flower_delivery_english.html"
-                class="products textMediumSmall textLight fontInter">Send Flowers</a>
+            <a href="consultation_english.html" class="products textMediumSmall textLight fontInter">Consultation</a>
+            <a href="flower_delivery_english.html" class="products textMediumSmall textLight fontInter">Send Flowers</a>
         </div>
     </div>
 
     <div class="allServices">
         <a href="products_english.html" class="products textMedium textDark fontProza fontBold">Products</a>
         <a href="consultation_english.html" class="products textMedium textDark fontProza fontBold">Consultation</a>
-        <a href="flower_delivery_english.html"
-            class="products textMedium textDark fontProza fontBold">Send Flowers</a>
+        <a href="flower_delivery_english.html" class="products textMedium textDark fontProza fontBold">Send Flowers</a>
     </div>
 </header>
     <main>
         <div class="centerInfo textSmall fontInter">
             <div class="welcomeMessage textLarge textDark fontLabrada">
-                Welcome to Delikat Flora 
+                Welcome to Delikat Flora!
             </div>
             <noscript>
                 <div class="noscriptContainer">
