--- a/website/products.html
+++ b/website/products.html
@@ -30,6 +30,7 @@
         <div class="flagDropDownMenu">
             <a href="products.html"><img src="./images/swedish_flag.jpg" alt="Swedish"></a>
             <a href="products_english.html"><img src="./images/british_flag.jpg" alt="English"></a>
+            <a href="products_danish.html"><img src="./images/danish_flag.jpg" alt="Danish"></a>
         </div>
     </div>
 
@@ -46,18 +47,15 @@
         </label>
         <div class="dropDownMenu">
             <a href="products.html" class="products textMediumSmall textLight fontInter">Produkter</a>
-            <a href="consultation.html"
-                class="products textMediumSmall textLight fontInter">Konsultation</a>
-            <a href="flower_delivery.html"
-                class="products textMediumSmall textLight fontInter">Blommogram</a>
+            <a href="consultation.html" class="products textMediumSmall textLight fontInter">Konsultation</a>
+            <a href="flower_delivery.html" class="products textMediumSmall textLight fontInter">Blommogram</a>
         </div>
     </div>
 
     <div class="allServices">
         <a href="products.html" class="products textMedium textDark fontProza fontBold">Produkter</a>
         <a href="consultation.html" class="products textMedium textDark fontProza fontBold">Konsultation</a>
-        <a href="flower_delivery.html"
-            class="products textMedium textDark fontProza fontBold">Blommogram</a>
+        <a href="flower_delivery.html" class="products textMedium textDark fontProza fontBold">Blommogram</a>
     </div>
 </header>
     <main>
