--- a/website/consultation_danish.html
+++ b/website/consultation_danish.html
@@ -1,39 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Konsultation</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    <noscript>
-        <style>
-            .allServices,
-            .dropDown,
-            header .textLogo {
-                display: none;
-            }
-
-            .welcomeMessage {
-                margin-top: -20px;
-            }
-        </style>
-    </noscript>
 </head>
 
 <body>
     <header>
     <div class="languageSelection">
-        <button onclick="flagDropDown()" class="flagDropDown" style="background-image: url(./images/british_flag.jpg);"></button>
+        <button onclick="flagDropDown()" class="flagDropDown" style="background-image: url(./images/danish_flag.jpg);"></button>
         <div class="flagDropDownMenu">
-            <a href="about_us.html"><img src="./images/swedish_flag.jpg" alt="Swedish"></a>
-            <a href="about_us_english.html"><img src="./images/british_flag.jpg" alt="English"></a>
-            <a href="about_us_danish.html"><img src="./images/danish_flag.jpg" alt="Danish"></a>
+            <a href="consultation.html"><img src="./images/swedish_flag.jpg" alt="Swedish"></a>
+            <a href="consultation_english.html"><img src="./images/british_flag.jpg" alt="English"></a>
+            <a href="consultation_danish.html"><img src="./images/danish_flag.jpg" alt="Danish"></a>
         </div>
     </div>
 
-    <a href="index_english.html" class="title textLarge textLight fontLabrada">
+    <a href="index_danish.html" class="title textLarge textLight fontLabrada">
         DELIKAT FLORA
     </a>
     <div class="logo textMediumLarge textLogo">
@@ -45,48 +32,45 @@
             <button onclick="onDropDownButtonClick()" class="dropButton"></button>
         </label>
         <div class="dropDownMenu">
-            <a href="products_english.html" class="products textMediumSmall textLight fontInter">Products</a>
-            <a href="consultation_english.html" class="products textMediumSmall textLight fontInter">Consultation</a>
-            <a href="flower_delivery_english.html" class="products textMediumSmall textLight fontInter">Send Flowers</a>
+            <a href="products_danish.html" class="products textMediumSmall textLight fontInter">Produkter</a>
+            <a href="consultation_danish.html" class="products textMediumSmall textLight fontInter">Konsultation</a>
+            <a href="flower_delivery_danish.html" class="products textMediumSmall textLight fontInter">Send blomster</a>
         </div>
     </div>
 
     <div class="allServices">
-        <a href="products_english.html" class="products textMedium textDark fontProza fontBold">Products</a>
-        <a href="consultation_english.html" class="products textMedium textDark fontProza fontBold">Consultation</a>
-        <a href="flower_delivery_english.html" class="products textMedium textDark fontProza fontBold">Send Flowers</a>
+        <a href="products_danish.html" class="products textMedium textDark fontProza fontBold">Produkter</a>
+        <a href="consultation_danish.html" class="products textMedium textDark fontProza fontBold">Konsultation</a>
+        <a href="flower_delivery_danish.html" class="products textMedium textDark fontProza fontBold">Send blomster</a>
     </div>
 </header>
     <main>
         <div class="centerInfo textSmall fontInter">
-            <div class="staffPage">
-                <div class="staffMember">
-                    <img src="images/fredrik_ortqvist.jpg" alt="">
-                    <p>Fredrik Örtqvist</p>
-                    <p>Owner</p>
-                </div>
-                <div class="staffMember">
-                    <img src="images/anna_pettersson.jpg" alt="">
-                    <p>Anna Pettersson</p>
-                    <p>Horticulturist</p>
-                </div>
-                <div class="staffMember">
-                    <img src="images/orjan_johansson.jpg" alt="">
-                    <p>Örjan Johansson</p>
-                    <p>Florist</p>
+            <div class="servicesPage">
+                <div class="service">
+                    <div class="serviceName textMedium fontProza fontBold">
+                        Konsultation
+                    </div>
+                    <div class="priceTag">
+                        250 SEK / 30 minutter
+                    </div>
+                    <img src="images/consultation.jpg" alt="">
+                    <div class="serviceDescription">
+                        I løbet af en 30-minutters konsultation får du personlig rådgivning fra vores blomsterhandler. Sammen gennemgår vi dine ønsker, farver og den følelse, du ønsker at formidle. Kontakt os, så aftaler vi et tidspunkt med vores blomsterhandler.
+                    </div>
                 </div>
             </div>
         </div>
         <footer class="textSmall textLight fontInter">
     <div class="openingHoursInfo">
         <div class="textMedium fontProza fontBold">
-            Opening hours
+            Åbningstider
         </div>
         <table class="openingHoursTable">
             <tbody>
                 <tr>
                     <td>
-                        Monday
+                        Måndag
                     </td>
                     <td>
                         10-16
@@ -94,7 +78,7 @@
                 </tr>
                 <tr>
                     <td>
-                        Tuesday
+                        Tirsdag
                     </td>
                     <td>
                         10-16
@@ -102,7 +86,7 @@
                 </tr>
                 <tr>
                     <td>
-                        Wednesday
+                        Onsdag
                     </td>
                     <td>
                         12-18
@@ -110,7 +94,7 @@
                 </tr>
                 <tr>
                     <td>
-                        Thursday
+                        Torsdag
                     </td>
                     <td>
                         10-16
@@ -118,7 +102,7 @@
                 </tr>
                 <tr>
                     <td>
-                        Friday
+                        Fredag
                     </td>
                     <td>
                         10-16
@@ -126,7 +110,7 @@
                 </tr>
                 <tr>
                     <td>
-                        Saturday
+                        Lørdag
                     </td>
                     <td>
                         12-15
@@ -134,10 +118,10 @@
                 </tr>
                 <tr>
                     <td>
-                        Sunday
+                        Søndag
                     </td>
                     <td>
-                        CLOSED
+                        LUKKET
                     </td>
                 </tr>
             </tbody>
@@ -148,12 +132,12 @@
         <div class="textMedium fontProza fontBold">
             Delikat Flora
         </div>
-        <a href="about_us_english.html">About us</a>
+        <a href="about_us_danish.html">Om os</a>
     </div>
     <div class="divider"></div>
     <div class="contactInfo">
         <div class="textMedium fontProza fontBold">
-            Contact information
+            Kontaktoplysninger
         </div>
         <p>
             <a href="tel:+46630555555">0630 555 555</a>
