--- a/website/flower_delivery_english.html
+++ b/website/flower_delivery_english.html
@@ -29,6 +29,7 @@
         <div class="flagDropDownMenu">
             <a href="flower_delivery.html"><img src="./images/swedish_flag.jpg" alt="Swedish"></a>
             <a href="flower_delivery_english.html"><img src="./images/british_flag.jpg" alt="English"></a>
+            <a href="flower_delivery_danish.html"><img src="./images/danish_flag.jpg" alt="Danish"></a>
         </div>
     </div>
 
@@ -45,18 +46,15 @@
         </label>
         <div class="dropDownMenu">
             <a href="products_english.html" class="products textMediumSmall textLight fontInter">Products</a>
-            <a href="consultation_english.html"
-                class="products textMediumSmall textLight fontInter">Consultation</a>
-            <a href="flower_delivery_english.html"
-                class="products textMediumSmall textLight fontInter">Send Flowers</a>
+            <a href="consultation_english.html" class="products textMediumSmall textLight fontInter">Consultation</a>
+            <a href="flower_delivery_english.html" class="products textMediumSmall textLight fontInter">Send Flowers</a>
         </div>
     </div>
 
     <div class="allServices">
         <a href="products_english.html" class="products textMedium textDark fontProza fontBold">Products</a>
         <a href="consultation_english.html" class="products textMedium textDark fontProza fontBold">Consultation</a>
-        <a href="flower_delivery_english.html"
-            class="products textMedium textDark fontProza fontBold">Send Flowers</a>
+        <a href="flower_delivery_english.html" class="products textMedium textDark fontProza fontBold">Send Flowers</a>
     </div>
 </header>
     <main>
