--- a/website/index_danish.html
+++ b/website/index_danish.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Delikat Flora</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <noscript>
@@ -18,6 +18,12 @@
             .welcomeMessage {
                 margin-top: -20px;
             }
+
+            @media screen and (max-width: 900px) {
+                .welcomeMessage {
+                    margin-top: 0px;
+                }
+            }
         </style>
     </noscript>
 </head>
@@ -25,15 +31,15 @@
 <body>
     <header>
     <div class="languageSelection">
-        <button onclick="flagDropDown()" class="flagDropDown" style="background-image: url(./images/british_flag.jpg);"></button>
+        <button onclick="flagDropDown()" class="flagDropDown" style="background-image: url(./images/danish_flag.jpg);"></button>
         <div class="flagDropDownMenu">
-            <a href="about_us.html"><img src="./images/swedish_flag.jpg" alt="Swedish"></a>
-            <a href="about_us_english.html"><img src="./images/british_flag.jpg" alt="English"></a>
-            <a href="about_us_danish.html"><img src="./images/danish_flag.jpg" alt="Danish"></a>
+            <a href="index.html"><img src="./images/swedish_flag.jpg" alt="Swedish"></a>
+            <a href="index_english.html"><img src="./images/british_flag.jpg" alt="English"></a>
+            <a href="index_danish.html"><img src="./images/danish_flag.jpg" alt="Danish"></a>
         </div>
     </div>
 
-    <a href="index_english.html" class="title textLarge textLight fontLabrada">
+    <a href="index_danish.html" class="title textLarge textLight fontLabrada">
         DELIKAT FLORA
     </a>
     <div class="logo textMediumLarge textLogo">
@@ -45,48 +51,48 @@
             <button onclick="onDropDownButtonClick()" class="dropButton"></button>
         </label>
         <div class="dropDownMenu">
-            <a href="products_english.html" class="products textMediumSmall textLight fontInter">Products</a>
-            <a href="consultation_english.html" class="products textMediumSmall textLight fontInter">Consultation</a>
-            <a href="flower_delivery_english.html" class="products textMediumSmall textLight fontInter">Send Flowers</a>
+            <a href="products_danish.html" class="products textMediumSmall textLight fontInter">Produkter</a>
+            <a href="consultation_danish.html" class="products textMediumSmall textLight fontInter">Konsultation</a>
+            <a href="flower_delivery_danish.html" class="products textMediumSmall textLight fontInter">Send blomster</a>
         </div>
     </div>
 
     <div class="allServices">
-        <a href="products_english.html" class="products textMedium textDark fontProza fontBold">Products</a>
-        <a href="consultation_english.html" class="products textMedium textDark fontProza fontBold">Consultation</a>
-        <a href="flower_delivery_english.html" class="products textMedium textDark fontProza fontBold">Send Flowers</a>
+        <a href="products_danish.html" class="products textMedium textDark fontProza fontBold">Produkter</a>
+        <a href="consultation_danish.html" class="products textMedium textDark fontProza fontBold">Konsultation</a>
+        <a href="flower_delivery_danish.html" class="products textMedium textDark fontProza fontBold">Send blomster</a>
     </div>
 </header>
     <main>
         <div class="centerInfo textSmall fontInter">
-            <div class="staffPage">
-                <div class="staffMember">
-                    <img src="images/fredrik_ortqvist.jpg" alt="">
-                    <p>Fredrik Örtqvist</p>
-                    <p>Owner</p>
-                </div>
-                <div class="staffMember">
-                    <img src="images/anna_pettersson.jpg" alt="">
-                    <p>Anna Pettersson</p>
-                    <p>Horticulturist</p>
-                </div>
-                <div class="staffMember">
-                    <img src="images/orjan_johansson.jpg" alt="">
-                    <p>Örjan Johansson</p>
-                    <p>Florist</p>
-                </div>
+            <div class="welcomeMessage textLarge textDark fontLabrada">
+                Velkommen til Delikat Flora!
             </div>
+            <noscript>
+                <div class="noscriptContainer">
+                    <div class="fontInter noscriptMessage noscriptMessageWarning">
+                        Du har ikke javascript aktiveret i din browser.
+                    </div>
+                    <div class="fontInter noscriptMessage">
+                        Kontakt os for mere information om vores produkter og tjenester.
+                    </div>
+                    <div class="fontInter noscriptMessage">
+                        Tel: <a href="tel:+46630555555" class="textDark">0630 555 555</a><br>
+                        Mail: <a href="mailto:info@github.pages.io" class="textDark">info@github.pages.io</a>
+                    </div>
+                </div>
+            </noscript>
         </div>
         <footer class="textSmall textLight fontInter">
     <div class="openingHoursInfo">
         <div class="textMedium fontProza fontBold">
-            Opening hours
+            Åbningstider
         </div>
         <table class="openingHoursTable">
             <tbody>
                 <tr>
                     <td>
-                        Monday
+                        Måndag
                     </td>
                     <td>
                         10-16
@@ -94,7 +100,7 @@
                 </tr>
                 <tr>
                     <td>
-                        Tuesday
+                        Tirsdag
                     </td>
                     <td>
                         10-16
@@ -102,7 +108,7 @@
                 </tr>
                 <tr>
                     <td>
-                        Wednesday
+                        Onsdag
                     </td>
                     <td>
                         12-18
@@ -110,7 +116,7 @@
                 </tr>
                 <tr>
                     <td>
-                        Thursday
+                        Torsdag
                     </td>
                     <td>
                         10-16
@@ -118,7 +124,7 @@
                 </tr>
                 <tr>
                     <td>
-                        Friday
+                        Fredag
                     </td>
                     <td>
                         10-16
@@ -126,7 +132,7 @@
                 </tr>
                 <tr>
                     <td>
-                        Saturday
+                        Lørdag
                     </td>
                     <td>
                         12-15
@@ -134,10 +140,10 @@
                 </tr>
                 <tr>
                     <td>
-                        Sunday
+                        Søndag
                     </td>
                     <td>
-                        CLOSED
+                        LUKKET
                     </td>
                 </tr>
             </tbody>
@@ -148,12 +154,12 @@
         <div class="textMedium fontProza fontBold">
             Delikat Flora
         </div>
-        <a href="about_us_english.html">About us</a>
+        <a href="about_us_danish.html">Om os</a>
     </div>
     <div class="divider"></div>
     <div class="contactInfo">
         <div class="textMedium fontProza fontBold">
-            Contact information
+            Kontaktoplysninger
         </div>
         <p>
             <a href="tel:+46630555555">0630 555 555</a>
